--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -21,5 +21,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
+    <script src="cadastrar.js"></script>
 </body>
 </html>
