tela cadastro finalizada
tela cadastro 100% funcional

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -21,6 +21,6 @@
             <button type="submit">Cadastrar</button>
         </form>
     </div>
-    <script src="cadastrar.js"></script>
+    <script src="js/cadastrar.js"></script>
 </body>
 </html>
