--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -19,6 +19,7 @@
                 <option value="admin">Administrador</option>
             </select>
             <button type="submit">Cadastrar</button>
+            <a href="index.html" class="menu-principal">voltar</a>
         </form>
     </div>
     <script src="js/cadastrar.js"></script>
