--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SSG</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>Bem vindo ao SSG</h2>
+    <img class="logo-menu" src="img/logo.png" alt="Logo SisGO">
+    <div class="divisao1"></div>
+        <div class="home-container"></div>
+        <nav class="menu-principal">
+                
+                <a href="visualizar-notas.html" class="item-menu">Visualizar Notas</a>
+                <div class="divisao"></div>
+                <a href="visualizar-ordens.html" class="item-menu">Visualizar Ordens</a>
+                <div class="divisao"></div>
+                <a href="criar-nota.html" class="item-menu">Criar Nota</a>
+                <div class="divisao"></div>
+                <a href="abrir-ordem.html" class="item-menu">Abrir Ordem</a>
+                <div class="divisao"></div>
+                <a href="cadastro.html" class="item-menu">Cadastrar Usuário</a>
+                <div class="divisao"></div>
+                <a href="sobre.html" class="item-menu">Sobre</a>
+                <div class="divisao"></div>
+                <a href="login.html" class="item-menu">Sair</a>
+        </nav>
+    </div>
 </body>
 </html>
