--- a/public/login.html
+++ b/public/login.html
@@ -9,6 +9,7 @@
 <body>
     <div class="login-container">
         <form id="loginForm">
+            <img class="logo" src="img/logo.png" alt="Logo SisGO">
             <h2>Login</h2>
             <input type="text" id="nome" placeholder="Usuário" required/>
             <input type="password" id="senha" placeholder="Senha" required/>
