--- a/public/index.html
+++ b/public/index.html
@@ -20,19 +20,13 @@
     <nav class="menu-principal">
 
         <!-- Itens visíveis para TODOS (usuário e admin) -->
-        <a href="visualizar-notas.html" class="item-menu comum">
-            Visualizar Notas
-        </a>
+        <a href="visualizar-notas.html" class="item-menu comum">Visualizar Notas</a>
         <div class="divisao comum"></div>
 
-        <a href="visualizar-ordens.html" class="item-menu comum">
-            Visualizar Ordens
-        </a>
+        <a href="visualizar-ordens.html" class="item-menu comum">Visualizar Ordens</a>
         <div class="divisao comum"></div>
 
-        <a href="criar-nota.html" class="item-menu comum">
-            Criar Nota
-        </a>
+        <a href="criar-nota.html" class="item-menu comum">Criar Nota</a>
         <div class="divisao comum"></div>
 
         <!-- Itens EXCLUSIVOS do ADMINISTRADOR -->
