--- a/public/criar-nota.html
+++ b/public/criar-nota.html
@@ -16,7 +16,7 @@
     <!-- =========================
          FORMULÁRIO DE CRIAÇÃO DE NOTA
          ========================= -->
-    <form id="form-nota">
+    <form id="formNota">
 
         <!-- Título da nota -->
         <h3>Título da Nota</h3>
@@ -58,6 +58,8 @@
         <button type="submit" class="btn-enviar">
             Enviar Nota
         </button>
+        <a href="index.html" class="menu-principal">voltar</a>
     </form>
+    <script src="js/criar-nota.js"></script>
 </body>
 </html>
