--- a/public/visualizar-notas.html
+++ b/public/visualizar-notas.html
@@ -2,19 +2,16 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Visualizar Notas</title>
+    <title>Notas</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-<header>
-    <img class="logo-menu" src="img/logo.png" alt="Logo SisGO">
-</header>
+<h2>Notas do Condomínio</h2>
 
-<h2>Minhas Notas</h2>
-
-<div id="lista-notas"></div>
+<ul id="listaNotas" class="lista-notas"></ul>
 
 <script src="js/visualizar-notas.js"></script>
 </body>
 </html>
+
