--- a/public/sobre.html
+++ b/public/sobre.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h2>SisGO</h2>
-    
+    <h2 class="laura">SisGO</h2>
+    <p class="laura1">Versão: 1.0 (Aplicação Web)</p>
+
 </body>
 </html>
