itens páginas notas
html, css e js

--- a/public/nota.html
+++ b/public/nota.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nota</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -23,6 +24,8 @@
     </select>
     <button onclick="atualizarStatus()">Atualizar</button>
 </div>
+
+<a href="visualizar-notas.html" class="menu-principal">voltar</a>
 
 <script src="js/nota.js"></script>
 </body>
