--- a/public/visualizar-notas.html
+++ b/public/visualizar-notas.html
@@ -11,6 +11,8 @@
 
 <ul id="listaNotas" class="lista-notas"></ul>
 
+<a href="index.html" class="menu-principal">voltar</a>
+
 <script src="js/visualizar-notas.js"></script>
 </body>
 </html>
