botao abrir ordens
botao funcionando, atualizar status em andamento

--- a/public/nota.html
+++ b/public/nota.html
@@ -22,8 +22,13 @@
         <option value="em andamento">Em andamento</option>
         <option value="concluida">Encerrada</option>
     </select>
-    <button onclick="atualizarStatus()">Atualizar</button>
+
+    <button id="btnatualizarStatus()">Atualizar</button>
+
+    <!-- 🔹 ÁREA DA ORDEM -->
+    <div id="ordemArea"></div>
 </div>
+
 
 <a href="visualizar-notas.html" class="menu-principal">voltar</a>
 
