--- a/public/nota.html
+++ b/public/nota.html
@@ -23,7 +23,7 @@
         <option value="concluida">Encerrada</option>
     </select>
 
-    <button id="btnatualizarStatus()">Atualizar</button>
+    <button id="btnAtualizarStatus">Atualizar</button>
 
     <!-- 🔹 ÁREA DA ORDEM -->
     <div id="ordemArea"></div>
@@ -32,6 +32,6 @@
 
 <a href="visualizar-notas.html" class="menu-principal">voltar</a>
 
-<script src="js/nota.js"></script>
+<script src="js/nota.js" defer></script>
 </body>
 </html>
