--- a/public/visualizar-ordens.html
+++ b/public/visualizar-ordens.html
@@ -13,7 +13,7 @@
 
 <h2>Ordens de Serviço</h2>
 
-<div id="listaOrdens" class="lista"></div>
+<div id="listaOrdens" class="lista-ordens"></div>
 
 <a href="index.html" class="menu-principal">voltar</a>
 
