--- a/public/visualizar-notas.html
+++ b/public/visualizar-notas.html
@@ -9,6 +9,37 @@
 
 <h2>Notas do Condomínio</h2>
 
+<!-- ================================ -->
+<!-- 🔎 FILTRO DE NOTAS -->
+<!-- ================================ -->
+<form id="filtroNotas" class="filtro-container">
+
+  <div class="filtro-campo">
+    <label for="status">Status</label>
+    <select id="status">
+      <option value="">Em aberto (padrão)</option>
+      <option value="aberta">Aberta</option>
+      <option value="em andamento">Em andamento</option>
+      <option value="encerrada">Encerrada</option>
+    </select>
+  </div>
+
+  <div class="filtro-campo">
+    <label for="inicio">Data inicial</label>
+    <input type="date" id="inicio">
+  </div>
+
+  <div class="filtro-campo">
+    <label for="fim">Data final</label>
+    <input type="date" id="fim">
+  </div>
+
+  <button type="submit" class="btn-filtrar">
+    Filtrar
+  </button>
+
+</form>
+
 <ul id="listaNotas" class="lista-notas"></ul>
 
 <a href="index.html" class="menu-principal">voltar</a>
