--- a/public/visualizar-ordens.html
+++ b/public/visualizar-ordens.html
@@ -16,34 +16,23 @@
 <!-- ================================ -->
 <!-- 🔎 FILTRO DE ORDENS DE SERVIÇO -->
 <!-- ================================ -->
-<form id="filtroOrdens" class="filtro-container">
+<form id="filtroOrdens" class="filtro">
+  <label>Status:</label>
+  <select id="filtroStatus">
+    <option value="">Em aberto (padrão)</option>
+    <option value="aberta">Aberta</option>
+    <option value="em andamento">Em andamento</option>
+    <option value="encerrada">Encerrada</option>
+  </select>
 
-  <div class="filtro-campo">
-    <label for="status">Status</label>
-    <select id="status">
-      <option value="">Em aberto (padrão)</option>
-      <option value="aberta">Aberta</option>
-      <option value="em andamento">Em andamento</option>
-      <option value="encerrada">Encerrada</option>
-    </select>
-  </div>
+  <label>Data inicial:</label>
+  <input type="date" id="filtroInicio">
 
-  <div class="filtro-campo">
-    <label for="inicio">Data inicial</label>
-    <input type="date" id="inicio">
-  </div>
+  <label>Data final:</label>
+  <input type="date" id="filtroFim">
 
-  <div class="filtro-campo">
-    <label for="fim">Data final</label>
-    <input type="date" id="fim">
-  </div>
-
-  <button type="submit" class="btn-filtrar">
-    Filtrar
-  </button>
-
+  <button type="submit">Filtrar</button>
 </form>
-
 
 <div id="listaOrdens" class="lista-ordens"></div>
 
