filtro visualizar notas
filtro da visualização de notas resolvido, necessário, exibir por padrão as abertas e em andamento, mostrar encerradas somente quando filtradas e não permitir atualização de status em encerradas

--- a/public/visualizar-notas.html
+++ b/public/visualizar-notas.html
@@ -17,7 +17,7 @@
   <div class="filtro-campo">
     <label for="status">Status</label>
     <select id="status">
-      <option value="">Em aberto (padrão)</option>
+      <option value="">Todas</option>
       <option value="aberta">Aberta</option>
       <option value="em andamento">Em andamento</option>
       <option value="encerrada">Encerrada</option>
