--- a/public/visualizar-ordens.html
+++ b/public/visualizar-ordens.html
@@ -19,7 +19,7 @@
 <form id="filtroOrdens" class="filtro">
   <label>Status:</label>
   <select id="filtroStatus">
-    <option value="">Em aberto (padrão)</option>
+    <option value="">Todas</option>
     <option value="aberta">Aberta</option>
     <option value="em andamento">Em andamento</option>
     <option value="encerrada">Encerrada</option>
