Ajuste nos filtros
Falta ajustar filtro das nota, exibir todas, exceto encerradas

--- a/public/visualizar-ordens.html
+++ b/public/visualizar-ordens.html
@@ -19,10 +19,10 @@
 <form id="filtroOrdens" class="filtro">
   <label>Status:</label>
   <select id="filtroStatus">
-    <option value="">Todas</option>
+    <option value="">Abertas/Andamento</option>
     <option value="aberta">Aberta</option>
     <option value="em andamento">Em andamento</option>
-    <option value="encerrada">Encerrada</option>
+    <option value="encerrada">Encerradas</option>
   </select>
 
   <label>Data inicial:</label>
