--- a/public/nota.html
+++ b/public/nota.html
@@ -20,7 +20,7 @@
     <select id="novoStatus">
         <option value="aberta">Aberta</option>
         <option value="em andamento">Em andamento</option>
-        <option value="concluida">Encerrada</option>
+        <option value="encerrada">Encerrada</option>
     </select>
 
     <button id="btnAtualizarStatus">Atualizar</button>
