filtros e exibição ok
filtros e exibição finalizados, proximo passo acrescentar descrição para ordens

--- a/public/ordem.html
+++ b/public/ordem.html
@@ -13,6 +13,7 @@
 <p><strong>Status:</strong> <span id="status"></span></p>
 <p><strong>Administrador:</strong> <span id="admin"></span></p>
 
+<a href="visualizar-ordens.html">Voltar para Ordens</a>
 <a id="voltarNota" class="menu-principal">Voltar para Nota</a>
 
 <script src="js/ordem.js" defer></script>
