--- a/public/ordem.html
+++ b/public/ordem.html
@@ -10,6 +10,15 @@
 <h2 id="titulo"></h2>
 <p id="descricao"></p>
 
+<h3>Histórico da Ordem</h3>
+
+<div id="historicoLista"></div>
+
+<form id="formHistorico">
+  <textarea id="descricaoHistorico" placeholder="Adicionar atualização..." required></textarea>
+  <button type="submit">Adicionar Atualização</button>
+</form>
+
 <p><strong>Status:</strong> <span id="status"></span></p>
 <p><strong>Administrador:</strong> <span id="admin"></span></p>
 
