--- a/public/ordem.html
+++ b/public/ordem.html
@@ -20,6 +20,19 @@
 </form>
 
 <p><strong>Status:</strong> <span id="status"></span></p>
+<div id="areaStatus">
+  <label for="novoStatus">Alterar status da ordem:</label>
+
+  <select id="novoStatus">
+    <option value="aberta">Aberta</option>
+    <option value="em andamento">Em andamento</option>
+    <option value="encerrada">Encerrada</option>
+  </select>
+
+  <button id="btnAtualizarStatus">Atualizar Status</button>
+</div>
+
+
 <p><strong>Administrador:</strong> <span id="admin"></span></p>
 
 <a href="visualizar-ordens.html">Voltar para Ordens</a>
