--- a/public/ordem.html
+++ b/public/ordem.html
@@ -36,7 +36,7 @@
 <p><strong>Administrador:</strong> <span id="admin"></span></p>
 
 <a href="visualizar-ordens.html">Voltar para Ordens</a>
-<a id="voltarNota" class="menu-principal">Voltar para Nota</a>
+<a id="voltarNota" class="menu-principal">Ver Nota</a>
 
 <script src="js/ordem.js" defer></script>
 </body>
