--- a/public/criar-nota.html
+++ b/public/criar-nota.html
@@ -45,6 +45,7 @@
         type="file"
         name="imagem"
         accept="image/*"
+        capture="environment"
         >
 
         <!-- Botão de envio -->
